--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://www.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>dev.pivozavrus.bugreports.testops</groupId>
+    <groupId>dev.pivozavr.bugreports.testops</groupId>
     <artifactId>allure-testops-bugreports</artifactId>
     <version>1.0-SNAPSHOT</version>
 
@@ -12,20 +12,20 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit.jupiter.version>5.8.1</junit.jupiter.version>
+        <junit.jupiter.version>5.10.0</junit.jupiter.version>
         <allure.version>2.15.0</allure.version>
-        <junit-jupiter.version>5.10.0</junit-jupiter.version>
+        <aspectj.version>1.9.19</aspectj.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>${junit-jupiter.version}</version>
+            <version>${junit.jupiter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-jupiter.version}</version>
+            <version>${junit.jupiter.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -36,16 +36,6 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit5</artifactId>
             <version>${allure.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.jupiter</groupId>
-                    <artifactId>junit-jupiter-api</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.junit.platform</groupId>
-                    <artifactId>junit-platform-launcher</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>io.qameta.allure</groupId>
@@ -62,6 +52,12 @@
             <artifactId>allure-test-filter</artifactId>
             <version>${allure.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.32</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -71,8 +67,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -107,10 +103,8 @@
                         <prodUserCommonPassword>${prodUserCommonPassword}</prodUserCommonPassword>
                         <prodUserPaymentsPassword>${prodUserPaymentsPassword}</prodUserPaymentsPassword>
                         <prodUserPrivilegePassword>${prodUserPrivilegePassword}</prodUserPrivilegePassword>
-                        <prodUserLsNextPaymentsPassword>${prodUserLsNextPaymentsPassword}
-                        </prodUserLsNextPaymentsPassword>
-                        <prodUserWithoutIdentificationPassword>${prodUserWithoutIdentificationPassword}
-                        </prodUserWithoutIdentificationPassword>
+                        <prodUserLsNextPaymentsPassword>${prodUserLsNextPaymentsPassword}</prodUserLsNextPaymentsPassword>
+                        <prodUserWithoutIdentificationPassword>${prodUserWithoutIdentificationPassword}</prodUserWithoutIdentificationPassword>
                         <prodUserAbTestPassword>${prodUserAbTestPassword}</prodUserAbTestPassword>
                         <hosts.mobsite>${hosts.mobsite}</hosts.mobsite>
                         <hosts.lsapi>${hosts.lsapi}</hosts.lsapi>
